trigger github action on  tx-submission-warning

--- a/.github/workflows/typescript-release.yaml
+++ b/.github/workflows/typescript-release.yaml
@@ -1,7 +1,8 @@
 name:  build and deploy
 on:
-  workflow_dispatch:
-
+  push:
+    branches:
+      - tx-submission-warning
 jobs:
   build:
     runs-on: ubuntu-latest
