--- a/clients/TypeScript/package.json
+++ b/clients/TypeScript/package.json
@@ -57,5 +57,8 @@
     "ts-jest": "^26.5.3",
     "typedoc": "^0.21.4",
     "typescript": "^4.2.3"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
