--- a/clients/TypeScript/package.json
+++ b/clients/TypeScript/package.json
@@ -59,6 +59,7 @@
     "typescript": "^4.2.3"
   },
   "publishConfig": {
+    "access": "restricted",
     "registry": "https://npm.pkg.github.com/"
   }
 }
