--- a/clients/TypeScript/packages/client/package.json
+++ b/clients/TypeScript/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cardano-ogmios/client",
+  "name": "@tango-crypto/client",
   "version": "5.3.0",
   "description": "TypeScript client library for Cardano Ogmios",
   "engines": {
